@@ -11,13 +11,15 @@
 <f:if condition="{showNews}">
 	<!-- News -->
 	<h2 class="tx_egovapi_block_news"><f:translate key="block_news">News</f:translate></h2>
-	<f:format.html>{domain.news}</f:format.html>
+	<div class="tx_egovapi_block_news">
+		<f:format.html>{domain.news}</f:format.html>
+	</div>
 </f:if>
 
 <f:if condition="{showSubdomains}">
 	<!-- Subdomains -->
 	<h2 class="tx_egovapi_block_subdomains"><f:translate key="block_subdomains">Subdomains</f:translate></h2>
-	<ul>
+	<ul class="tx_egovapi_block_subdomains">
 		<f:for each="{domain.subdomains.items}" as="item">
 			<li>{item}</li>
 		</f:for>
@@ -27,13 +29,13 @@
 <f:if condition="{showDescriptor}">
 	<!-- Descriptor -->
 	<h2 class="tx_egovapi_block_descriptors"><f:translate key="block_descriptors">Descriptors</f:translate></h2>
-	<p>{domain.descriptor}</p>
+	<p class="tx_egovapi_block_descriptors">{domain.descriptor}</p>
 </f:if>
 
 <f:if condition="{showSynonym}">
 	<!-- Synonym -->
 	<h2 class="tx_egovapi_block_synonyms"><f:translate key="block_synonyms">Synonyms</f:translate></h2>
-	<p>{domain.synonym}</p>
+	<p class="tx_egovapi_block_synonyms">{domain.synonym}</p>
 </f:if>
 
 <ul class="tx_egovapi_topics">
