@@ -23,7 +23,7 @@
 <!-- ###DOMAINS### [end] -->
 
 <!-- ###HAS_PARENT### [begin] -->
-<p>
+<p class="tx_egovapi_backToList">
 	<!-- ###DOMAIN_LINK_VIEWS### -->###ACTION_BACK_TO_LIST###<!-- ###DOMAIN_LINK_VIEWS### -->
 </p>
 <!-- ###HAS_PARENT### [end] -->
@@ -45,27 +45,37 @@
 
 <!-- ###SHOW_GENERAL_INFORMATION### [begin] -->
 <h2 class="tx_egovapi_block_generalInformation">###BLOCK_GENERAL_INFORMATION###</h2>
-###DOMAIN_GENERAL_INFORMATION###
+<div class="tx_egovapi_block_generalInformation">
+	###DOMAIN_GENERAL_INFORMATION###
+</div>
 <!-- ###SHOW_GENERAL_INFORMATION### [end] -->
 
 <!-- ###SHOW_GENERAL_NEWS### [begin] -->
 <h2 class="tx_egovapi_block_news">###BLOCK_NEWS###</h2>
-###DOMAIN_NEWS###
+<div class="tx_egovapi_block_news">
+	###DOMAIN_NEWS###
+</div>
 <!-- ###SHOW_GENERAL_NEWS### [end] -->
 
 <!-- ###SHOW_GENERAL_SUBDOMAINS### [begin] -->
 <h2 class="tx_egovapi_block_subdomains">###BLOCK_SUBDOMAINS###</h2>
-###DOMAIN_SUBDOMAINS###
+<div class="tx_egovapi_block_subdomains">
+	###DOMAIN_SUBDOMAINS###
+</div>
 <!-- ###SHOW_GENERAL_SUBDOMAINS### [end] -->
 
 <!-- ###SHOW_GENERAL_DESCRIPTOR### [begin] -->
 <h2 class="tx_egovapi_block_descriptors">###BLOCK_DESCRIPTORS###</h2>
-###DOMAIN_DESCRIPTOR###
+<div class="tx_egovapi_block_descriptors">
+	###DOMAIN_DESCRIPTOR###
+</div>
 <!-- ###SHOW_GENERAL_DESCRIPTOR### [end] -->
 
 <!-- ###SHOW_GENERAL_SYNONYM### [begin] -->
 <h2 class="tx_egovapi_block_synonyms">###BLOCK_SYNONYMS###</h2>
-###DOMAIN_SYNONYM###
+<div class="tx_egovapi_block_synonyms">
+	###DOMAIN_SYNONYM###
+</div>
 <!-- ###SHOW_GENERAL_SYNONYM### [end] -->
 
 <!-- ###DOMAIN_SINGLE### [end] -->
