@@ -23,7 +23,7 @@
 <!-- ###TOPICS### [end] -->
 
 <!-- ###HAS_PARENT### [begin] -->
-<p>
+<p class="tx_egovapi_backToList">
 	<!-- ###TOPIC_LINK_DOMAINS### -->###ACTION_BACK_TO_LIST###<!-- ###TOPIC_LINK_DOMAINS### -->
 </p>
 <!-- ###HAS_PARENT### [end] -->
@@ -45,27 +45,37 @@
 
 <!-- ###SHOW_GENERAL_INFORMATION### [begin] -->
 <h2 class="tx_egovapi_block_generalInformation">###BLOCK_GENERAL_INFORMATION###</h2>
-###TOPIC_GENERAL_INFORMATION###
+<div class="tx_egovapi_block_generalInformation">
+	###TOPIC_GENERAL_INFORMATION###
+</div>
 <!-- ###SHOW_GENERAL_INFORMATION### [end] -->
 
 <!-- ###SHOW_GENERAL_NEWS### [begin] -->
 <h2 class="tx_egovapi_block_news">###BLOCK_NEWS###</h2>
-###TOPIC_NEWS###
+<div class="tx_egovapi_block_news">
+	###TOPIC_NEWS###
+</div>
 <!-- ###SHOW_GENERAL_NEWS### [end] -->
 
 <!-- ###SHOW_GENERAL_SUBTOPICS### [begin] -->
 <h2 class="tx_egovapi_block_subtopics">###BLOCK_SUBTOPICS###</h2>
-###TOPIC_SUBTOPICS###
+<div class="tx_egovapi_block_subtopics">
+	###TOPIC_SUBTOPICS###
+</div>
 <!-- ###SHOW_GENERAL_SUBTOPICS### [end] -->
 
 <!-- ###SHOW_GENERAL_DESCRIPTOR### [begin] -->
 <h2 class="tx_egovapi_block_descriptors">###BLOCK_DESCRIPTORS###</h2>
-###TOPIC_DESCRIPTOR###
+<div class="tx_egovapi_block_descriptors">
+	###TOPIC_DESCRIPTOR###
+</div>
 <!-- ###SHOW_GENERAL_DESCRIPTOR### [end] -->
 
 <!-- ###SHOW_GENERAL_SYNONYM### [begin] -->
 <h2 class="tx_egovapi_block_synonyms">###BLOCK_SYNONYMS###</h2>
-###TOPIC_SYNONYM###
+<div class="tx_egovapi_block_synonyms">
+	###TOPIC_SYNONYM###
+</div>
 <!-- ###SHOW_GENERAL_SYNONYM### [end] -->
 
 <!-- ###TOPIC_SINGLE### [end] -->
