@@ -1,5 +1,6 @@
 2011-03-08  Xavier Perseguers  <xavier@causal.ch>
 
+	* Added DIVs and classes to templates
 	* Fixed minor glitches in the documentation when rendered as HTML on TER
 
 2011-03-07  Xavier Perseguers  <xavier@causal.ch>
